--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@types/react-icons": "^3.0.0",
+    "i18next": "^21.8.5",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
+    "luxon": "^3.0.4",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
     "react-i18next": "^11.16.9",
-    "i18next": "^21.8.5",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "i18next-http-backend": "^1.4.1"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
