--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@3rdweb/hooks": "^1.9.2",
     "@types/react-icons": "^3.0.0",
     "@types/react-slick": "^0.23.10",
     "i18next": "^21.8.5",
@@ -22,7 +23,8 @@
     "react-i18next": "^11.16.9",
     "react-icons": "^4.4.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
