wallet connect added with nested layout setup

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@3rdweb/hooks": "^1.9.2",
+    "@thirdweb-dev/react": "^3.2.6",
+    "@thirdweb-dev/sdk": "^3.2.6",
     "@types/react-icons": "^3.0.0",
     "@types/react-slick": "^0.23.10",
+    "ethers": "^5.7.1",
     "i18next": "^21.8.5",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
